navbar bug discovered and fixed on mobile

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -5,7 +5,7 @@
     and (orientation : portrait) {
 
   header{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
